[package]
name = "orx-concurrent-ordered-bag"
version = "2.13.0"
edition = "2024"
authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
description = "An efficient, convenient and lightweight grow-only concurrent data structure allowing high performance and ordered concurrent collection."
license = "MIT OR Apache-2.0"
repository = "https://github.com/orxfun/orx-ordered-concurrent-bag/"
keywords = [
    "concurrency",
    "parallelization",
    "data-structures",
    "atomic",
    "lock-free",
]
categories = ["data-structures", "concurrency", "rust-patterns", "no-std"]

[dependencies]
orx-pinned-vec = "3.16.0"
orx-fixed-vec = { git = "https://github.com/orxfun/orx-fixed-vec", branch = "new-concurrent-iter-version", default-features = false }
orx-split-vec = { git = "https://github.com/orxfun/orx-split-vec", branch = "new-concurrent-iter-version", default-features = false }
orx-pinned-concurrent-col = { git = "https://github.com/orxfun/orx-pinned-concurrent-col", branch = "new-pinned-vector-versions", default-features = false }

[dev-dependencies]
orx-concurrent-iter = "1.30.0"
orx-iterable = "1.3.0"
test-case = "3.3.1"

# TODO: to be tested with the new orx-concurrent-iter version
[lib]
doctest = false
