[package]
name = "orx-concurrent-ordered-bag"
version = "2.13.0"
edition = "2024"
authors = ["orxfun <orx.ugur.arikan@gmail.com>"]
description = "An efficient, convenient and lightweight grow-only concurrent data structure allowing high performance and ordered concurrent collection."
license = "MIT OR Apache-2.0"
repository = "https://github.com/orxfun/orx-ordered-concurrent-bag/"
keywords = [
    "concurrency",
    "parallelization",
    "data-structures",
    "atomic",
    "lock-free",
]
categories = ["data-structures", "concurrency", "rust-patterns", "no-std"]

[dependencies]
orx-pinned-vec = { version = "3.17.0", default-features = false }
orx-fixed-vec = { version = "3.18.0", default-features = false }
orx-split-vec = { version = "3.18.0", default-features = false }
orx-pinned-concurrent-col = { version = "2.14.0", default-features = false }

[dev-dependencies]
orx-concurrent-iter = { version = "2.3.0", default-features = false }
orx-iterable = "1.3.0"
test-case = "3.3.1"
